--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
 	"wpackagist-plugin/contact-form-7":"5.1.7",
 	"wpackagist-plugin/google-site-kit":"1.6.0",
     "wpackagist-plugin/user-role-editor":"4.53.1",
+	"wpackagist-plugin/wp-super-cache":"1.7.1",
 	  "wpackagist-plugin/admin-bar-hider":"1.0.0"
   },
   "require-dev": {
