--- a/composer.json
+++ b/composer.json
@@ -39,9 +39,9 @@
     "vlucas/phpdotenv": "^3.4.0",
     "wpackagist-plugin/advanced-custom-fields":"5.8.9",
     "wpackagist-plugin/classic-editor": "^1.5",
-	  "wpackagist-plugin/custom-post-type-ui":"1.7.4",
-	  "wpackagist-plugin/timber-library":"1.15.2",
-	  "wpackagist-plugin/wp-user-avatar":"2.2.5",
+	 "wpackagist-plugin/custom-post-type-ui":"1.7.4",
+	 "wpackagist-plugin/timber-library":"1.15.2",
+	"wpackagist-plugin/wp-user-avatar":"^2.2.5"
     "wpackagist-plugin/remove-category-url":"1.1.6",
     "wpackagist-plugin/radio-buttons-for-taxonomies":"2.0.4",
     "wpackagist-plugin/wp-mail-smtp-sendgrid-edition":"0.10.2",
